# sdfast

./: .gitignore  CMakeLists.txt  README.md
calc/: add.c  alloc.c  applyop.c  assign.c  bool.c  calc.h  calcprot.h  cassert.c  cleanvar.c  const.c  cross.c  debug.c  decl.c  decl.h  deriv.c  dimlen.c  dimtype.c  dot.c  dtoc.c  dvd.c  efprintf.c  eval.c  fixvrefs.c  gencode.h  indx.c  initcalc.c  language.c  language.h  logical.c  matmul.c  mul.c  neg.c  order.c  outer.c  parts.c  prassn.c  prexpr.c  protect.c  showtype.c  sincos.c  (+8 more)
doc/: README.md  SDFASTManual.docx
examples/: README.md
examples/c/: fbar.txt  fbarc.c  sdlib.c  sphere.c  sphere.sd  sphere.txt  sphere_d.c  sphere_i  sphere_s.c
examples/cpp/: Readme.txt  pend.sd  pendulum.cpp  sdfastdefs.h
examples/fortran/: fbar.f  fbar.sd  fbar.txt  humpage.f  humpage.sd  humpage.txt  orbit.f  orbit.sd  orbit.txt  orbitatt.f  orbitc.f  orbitc.sd  orbitrzv.f  pend.f  pend.sd  pend.txt  quickret.f  quickret.sd  quickret.txt  slew.f  slew.sd  slew.txt
libs/: charutil.c  find.c  init.c  libs.h  libsprot.h  machine.c  parse.c  parseopt.c  procinp.c  procvar.c  rainbow.h  readsys.c  words.h
sdfast_main/: bigm.c  conserr.c  cosines.c  declare.c  dircos.c  forces.c  kine.c  main.c  otkatk.c  print.c  pseudo.c  qdot.c  roadmap.c  sdanal.c  sdaux.c  sdderiv.c  sddyn.c  sderror.h  sdfaprot.h  sdfast.h  sdgrav.c  sdinit.c  sdinteg.c  sdmfrc.c  sdmom.c  sdresid.c  sdroot.c  sdsolv.c  sdstate.c  serial.c  velocity.c  version.c
